<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/card_elevation"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/visit_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:text="@string/medical_visits"/>
                <View style="@style/Divider"/>
                <TextView
                    android:id="@+id/visit_detail_provider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="20dp"
                    android:text="@string/medical_visits"/>
                <TextView
                    android:id="@+id/visit_detail_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="15dp"
                    android:text="@string/medical_visits"/>
                <View style="@style/Divider"/>
                <TextView
                    android:id="@+id/visit_detail_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="15dp"
                    android:text="@string/medical_visit_reason"/>
                <View style="@style/Divider"/>
                <TextView
                    android:id="@+id/visit_detail_diagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="15dp"
                    android:text="@string/medical_visit_diagnosis"/>
                <View style="@style/Divider"/>
                <TextView
                    android:id="@+id/visit_detail_medications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="15dp"
                    android:text="@string/medical_visit_medications"/>
                <View style="@style/Divider"/>
                <TextView
                    android:id="@+id/visit_detail_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rowitem_vertical_margin"
                    android:textSize="15dp"
                    android:text="@string/medical_visit_instructions"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>